--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.3",
     "react-scroll-horizontal": "^1.6.6",
     "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "sass": "^1.38.0",
     "web-vitals": "^1.0.1",
